# OnnxCMake

./: .gitignore  CMakeLists.txt
OnnxCMake/: CMakeLists.txt  OnnxCMake.cpp  OnnxCMake.h
